  People Directory by default.

- Fix offices link in Admin UI to work when site is not rooted at '/'.  Also
  only show link when there are offices.

- Fixed invalid Unicode returned by 'pdftotext' which was breaking pgtextindex.

- Fixed the static view of the maintenance app to work when not rooted at '/'.

- Added support for 'read only' mode.

- Added default InvitationBoilerplate to allow Terms and Conditions and
  Privacy Policy to be set up without using a customization policy.


3.54 (2011-01-19)
-----------------

- Fix people report picture views, broken by addition of report-based
  e-mail distribution lists. (LP #705171)

- Made report-based distribution lists addressable using "pretty" aliases.

- Implemented " Distribution lists on organizational reports" blueprint;  see:
  https://blueprints.launchpad.net/karl3/+spec/distribution-list-organizational

- Added fault tolerance in mailin for messages in unknown character encodings.
  (LP #698153)

- Quote name parts of addresses in From, To and Reply-To headers in alerts.
  (LP #702080)

- The default layout provider now detects when context is not contained by a
  community or intranet and returns the generic layout.  (LP #698879)


3.53 (2010-12-20)
-----------------

- Fixed bug when uploading images to new content via image drawer where the
  image would wind up stranded in a temp folder and would not show up in
  'My Recent' or 'Community' in the image drawer. (LP #691141)

3.52 (2010-12-06)
-----------------

- Remove 40-character limit for names of items inside the people directory.

- On the community members table: moved hidden inputs into a table cell,
  so IE doesn't add extra random space (LP #684209).

- Add missing formish resources to a page that manually constructs its form
  (LP #683651).


3.51 (2010-11-30)
-----------------

- Enabled adding redirector objects to peopledir sections, in order to
  provide backward compatibility for old URLs.
